# spro2tod

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
src/spro2tod/: __init__.py  spro2tod.py
